--- a/Day12_Javascript_Basic_Part_2/Code_demo_tren_lop/js_basic_2.html
+++ b/Day12_Javascript_Basic_Part_2/Code_demo_tren_lop/js_basic_2.html
@@ -2,112 +2,168 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Toán tử, Câu lệnh điều kiện, Vòng lặp trong lập trình
-	</title>
+	<title>JS cơ bản phần 2</title>
 </head>
 <body>
-	<script>
-		// I - Toán tử
-		// 1 + 2 = 3 -> 1 và 2 là các toán hạng, dấu + là toán tử
-		// 1/ Toán tử số học: tính toán các toán hạng và trả về 1 kiểu dữ liệu number
+	<script type="text/javascript">
+		// Kiến thức cơ bản lập trình nói chung và JS nói riêng
+		// 1/ Toán tử số học
+		// 3 + 5 = 8, 3, 5 là số hạng/toán hạng, + gọi là toán tử
+		
 		var number1 = 8;
 		var number2 = 3;
-		// Toán tử cộng +
-		var op1 = number1 + number2; // 11
-		// Toán tử trừ -
-		var op2 = number1 - number2; // 5
-		// Toán tử nhân *
-		var op3 = number1 * number2; //24
-		// Toán tử chia / phép chia hết hoặc ko
-		var op4 = number1 / 2; //4
-		// Toán tử chia lấy phần dư %
-		var op5 = number1 % number2; //2
-		// Toán tử tăng tích lũy lên 1 ++
-		number1++;
-		++number1;
-		// Toán tử tăng tích lũy đi 1 --
-		number2--;
+		// + Toán tử cộng: +
+		console.log(number1 + number2);//11
+		// + Toán tử trừ: -
+		console.log(number1 - number2); //5
+		// + Toán tử nhân: *
+		console.log(number1 * number2); //24
+		// + Toán tử chia: /
+		console.log(number1 / number2); // 2.6666667;
+		// + Toán tử chia lấy số dư: %
+		console.log(number1 % number2); // 2
+		// + Toán tử tăng tích lũy: ++
+		number1++; //number1 = number1 + 1 prefix, suffix
+		console.log(number1);//9
+		// + Toán tử giảm tích lũy: --
+		number2--; // number2 = number2 - 1
+		console.log(number2); //2
 
+		// Ví dụ về ++ --
 		var a = 5;
-		var sum = a++ - 2 + ++a;
-		//      =  5  - 2 +  7
-		var x = 5;
-		var sum = x++ * ++x + 2 * --x % 2;
-		//      =  5  *   7 + 2 *   6 % 2 = 35
-		//41 16 35
-		var x = 5;
-		var sum = x * x - --x * 2 + x++ - x * ++x
-		//      = 5 * 5 -   4 * 2 +  4  - 5 *  6
-		//-9
+		var sum = a++ + ++a; //11
+		           //5  +  7 // 12
+		console.log(sum);
 
-		//2  - Toán tử so sánh: so sánh các toán hạng xung quanh nó, kết quả trả về của biểu thức sử dụng toán tử so sánh luôn là boolean (true/false)
-		var number1 = 5;
-		var number2 = 4;
-		// So sánh lớn hơn >
-		var op1 = number1 > number2; //true
-		console.log(op1);
-		// So sánh lớn hơn hoặc bằng >=
-		var op2 = number1 >= number2; //true
-		// SS nhỏ hơn <
-		var op3 = number1 < number2; //false
-		// SS nhỏ hơn hoặc bằng <=
-		var op4 = number2 <= 4; //true
-		// SS bằng ==
-		var op5 = number1 == number2; // false
-		// SS bằng ===, so sánh bằng cả về giá trị và kiểu dữ liệu
-		var op6 = 6 == '6'; //true
-		var op7 = 6 === '6'; //false
-		// SS khác !=
-		var op8 = 6 != 0; //true
-
-		// 3 / Toán tử logic
-		// Thực tế đa số các trường hợp cần kết hợp nhiều điều kiện thì mới ra đc quyết định cuối cùng, cần toán tử logic để kết hợp các điều kiện lại, kết quả trả về của biểu thức sử dụng toán tử logic -> true/false
 		var x = 5;
-		var y = 3;
-		// - Toán tử AND &&, trả về true khi cả 2 biểu thức quanh nó là true, ngược lại là false
-		var op1 = (x >= 5) && (y <= 2); //false
-		// - Toán tử OR ||, trả về true khi 1 trong 2 biểu thức quanh nó true, ngược lại false
-		var op2 = (x >= 5) || (y <= 2); //true
-		// - Toán tử NOT !, phủ định của 1 biểu thức
-		var op3 = !(x >= 5 || y <= 2);//false
-
-		// 4 - Toán tử gán: =
+		var sum = x++ * ++x + 2 * --x % 2;  //39 36 13 41 40 35 31 42
+                // =  5  *  7  + 2 *  6  % 2 = 35
+		console.log(sum);
 		var x = 5;
-		x += 2; // x = x + 2 = 7
-		x -= 3; // x = x - 3 = 4
-		x *= 2; //8
-		x /= 4; // 2
-		x %= 2; // 0
-
-		// II / Câu lệnh điều kiện
-		// + Kiểm tra logic của 1 hành động, nếu logic đúng thì xử lý theo hướng này, ngược lại xử lý theo hướng khác
-		// + if, if...else, if...elseif...else, 
-		//switch...case
-		// + Câu lệnh điều kiện dựa vào biểu thức điều kiện để quyết định đi theo hướng nào
-		var x = 0;
-		// If: chỉ dùng cho 1 trường hợp duy nhất
-		if (x > 0) {
-			console.log('x > 0');
+		var sum = x * x - --x + 2 + x++ - x * ++x; //-3  -2  
+                //= 5 * 5 - 4  + 2 +  4  - 5 *  6 //-3
+		console.log(sum);
+		// 2 - Toán tử so sánh: so sánh 2 biểu thức, trả về true/false
+		var a = 5;
+		var b = 2;
+		// + So sánh bằng: ==
+		console.log(a == b); //false
+		// + So sánh khác: !=
+		console.log(a != b); //true
+		// + Lớn hơn: >
+		console.log(a > b); // true
+		// + Lớn hơn hoặc bằng: >=
+		console.log(a >= b);  //true
+		// + Nhỏ hơn: <
+		console.log(a < b); // false
+		// + Nhỏ hơn hoặc bằng: <=
+		console.log(a <= b);  //false
+		// 3 - Toán tử logic: kết hợp nhiều toán tử so sánh để tạo 1 biểu thức điều kiện
+		// + && (AND)
+		// true && true = true;
+		// true && false = false;
+		// false && false = false;
+		var ope1 = (5 > 2) && (1 == 1); 
+		console.log(ope1); //true
+		// + || (OR)
+		// true || true = true;
+		// false || true = true;
+		// false || false = false;
+		var ope2 = (-1 > 0) || (0 > -1); //true
+		// + ! (NOT)
+		// !true = false
+		// !false = true
+		var ope3 = !(5 > 3); //false
+		// 4 - Toán tử gán: gán giá trị bên phải toán tử vào biến bên trái nó
+		var number = 5;
+		// Cộng tích lũy: +=
+		number += 2; //number = number + 2 = 7
+		// Trừ: -=
+		number -= 1; //number = number - 1 = 6
+		// Nhân: *=
+		number *= 2; //12
+		// Chia: /=
+		number /= 4; //3
+		//Chia lấy dư: %=
+		number %= 2; //1
+		// CÂU LỆNH ĐIỀU KIỆN: If
+		// Có 3 thể hiện chính: if, if..else, if..elseif...
+		// + Câu lệnh if: chỉ kiểm tra nếu biểu thức đúng thì làm gì, dùng 1 trường hợp duy nhất
+		var number = 4;
+		if (number > 0 && number == 3) {
+			console.log("Biến number > 0");
 		}
-		// If...else: dùng cho 2 trường hợp
-		var x = 0;
-		if (x >= -1) {
-			console.log('x >= -1');
+		// + If...else: nếu đúng thì làm gì, ngược lại nếu sai thì làm gì -> 2 trường hợp
+		var number = 5;
+		if (number % 2 == 0) {
+			console.log("Number là số chẵn");
 		} else {
-			console.log('x < -1');
+			console.log("Number là số lẻ");
 		}
-		// If..elseif..else 
-		var point = 7;
+		// + If..elseif..else: >= 3 trường hợp
+		var point = 6.8;
 		if (point >= 8 && point <= 10) {
 			console.log('Giỏi');
 		} else if (point >= 6.5) {
-			console.log('KHá');
+			console.log('Khá');//
 		} else if (point >= 5) {
 			console.log('TB');
 		} else {
 			console.log('Yếu');
 		}
+
+		// Biểu thức switch case: là câu lệnh điều kiện thay thế cho if...elseif vì dễ đọc hơn
+		// switch...case chỉ thay thế đc if..elseif trong trường hợp biểu thức là so sánh bằng
+		var day = 4;
+		if (day == 2) {
+			console.log('Thứ hai');
+		} else if (day == 3) {
+			console.log('Thứ ba');
+		} else if (day == 4) {
+			console.log('Thứ tư'); //
+		} else {
+			console.log('Ko phải thứ hai, thứ ba, thứ tư');
+		}
+
+		var day = 2;
+		switch(day) {
+			case 2:
+				console.log('Thứ hai');
+				break; //thoát khỏi switch case, tìm đc case đúng thoát
+			case 3: 
+				console.log('Thứ ba');
+				break;
+			case 4: 
+				console.log('Thứ tư');
+				break;
+			default:
+				console.log('Ko phải thứ hai, thứ ba, thứ tư');			
+		}
+
+		// VÒNG LẶP
+		// Lặp đi lặp lại hành động nào đó
+		// + VD: log 500 lần: "Chào 500ae"
+		// Hiển thị từ 1 đến 10
+		// - for: biết trc số lần lặp
+		for (var i = 1; i <= 10; i++) {
+			console.log(i); //12345678910
+		}
+		// - while: chưa biết trc số lần lặp
+		var j = 1;
+		while (j <= 10) {
+			console.log(j);
+			j++;
+		}
+
+		// - do while: thực hiện logic r mới kiểm tra điều kiện
+		var k = 1;
+		do {
+			console.log(k);
+			k++;
+		} while (k <= 10);
+
+// php hay dùng vòng lặp foreach để xử lý mảng
+
 	</script>
 </body>
 </html>
