--- a/Day13_Javascript_Practice_jQuery/Code_demo_tren_lop/js_de4.html
+++ b/Day13_Javascript_Practice_jQuery/Code_demo_tren_lop/js_de4.html
@@ -57,6 +57,22 @@
   			const re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
   			return re.test(email);
 		}
+
+		function test(number) {
+			if (number % 2 == 0) {
+				return true;
+			}
+
+			return false;
+		}
+
+		var a = test(5);
+		if (a == true) {
+			console.log('Chẵn');
+		} else {
+			console.log('Lẻ')
+		}
+		// console.log(a); //15
 	</script>
 </body>
 </html>
